--- a/frontpage.css
+++ b/frontpage.css
@@ -519,3 +519,198 @@ h6 span{
     color: rgb(55, 40, 90);
     font-weight: bold;
 }
+
+/* ...... */
+/* Basic styling for the layout */
+.body{
+    .container{
+    background: transparent;
+     }
+    }
+
+
+#card-1{
+    background-color:#346ba1;
+    color:aliceblue;
+}
+#card-2{
+    background-color:#e07e63;
+    color:aliceblue;
+}
+#card-3{
+    background-color: #bfca43;
+    color:aliceblue;
+}
+#card-1:hover{
+    background-color:  #7eb1e4;
+}
+#card-2:hover{
+    background-color: #df9f8e;
+}
+#card-3:hover{
+    background-color:#bec476;
+}
+.card{
+    border-radius:12px ;
+.card-body{
+    border-radius: 12px;
+}
+}
+#table{
+  background-color:#346ba1;
+  color: aliceblue;
+}
+
+#table .list{
+ list-style: none;
+ padding: 20px;
+}
+
+#table .list .lists{
+  font-size: 16px;
+  margin: 12px 0;
+  text-transform:uppercase;
+  position: relative;
+} 
+
+#tada {
+  background-color: #346ba1;
+  color:aliceblue;
+}
+
+#tada {
+  #form {
+    background-color:#346ba1;
+    .form-control{
+      color:black;
+      font-weight: 600;
+      #text{
+        border: none;
+      }
+      #amount{
+        border: none;
+      }
+  }
+  .btn{
+     background-color:cadetblue;
+     color: aliceblue;
+     font-size: 20px;
+  }
+}
+}
+
+
+.chart-heading {
+  font-family: "Rubik", sans-serif;
+  color: #023047;
+  text-transform: uppercase;
+  font-size: 24px;
+  text-align: center;
+}
+
+.chart-container {
+  width: 250px;
+}
+
+.programming-stats {
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin: 0 auto;
+  width: fit-content;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding: 8px 32px;
+  color: #023047;
+  transition: all 400ms ease;
+  overflow: auto;
+}
+
+.programming-stats:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+
+.programming-stats .details ul {
+  list-style: none;
+  padding:20px;
+}
+
+.programming-stats .details ul li {
+  font-size: 16px;
+  margin: 12px 0;
+  text-transform: uppercase;
+}
+
+.programming-stats .details .percentage {
+  font-weight: 700;
+  color: #1092B4;
+}
+
+ /* @media only screen and (min-width: 280px) {
+   .col-programming-stats{
+        margin:8px;
+       max-width: 50%;
+ }
+ } */
+
+#bar-card {
+ 
+   font-family: "Rubik", sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin: 0 auto;
+  width: fit-content;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding: 8px 32px;
+  color: #023047;
+  transition: all 400ms ease;
+  
+}
+#bar-card:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+
+.chart{
+  position: relative;
+  height: 265px;
+}
+
+#barChart {
+  width: 100%;
+  height: 100%;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+@media (max-width: 768px) {
+  .chart-card {
+    max-width: 100%;
+  }
+} 
+
+.delete-btn{
+  color: black;
+  width:30px;
+  height: 30px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  margin-right: 20px;
+  border: none;
+  background: transparent;
+}
+.delete-btn:hover{
+  background-color: #bfca43;
+}
+
+
+
