--- a/get_started.css
+++ b/get_started.css
@@ -25,7 +25,7 @@ section{
     height: 100vh;
     /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(1_phone.avif) ; */
     /* background-color: rgb(43, 15, 75); */
-     background: linear-gradient(135deg, rgb(15, 15, 13), rgb(10, 62, 78));
+     background: linear-gradient(135deg, rgb(50, 11, 59), rgb(10, 62, 78));
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@ section{
     font-weight: 800;
     line-height: 60px;
     
-    color:  rgb(247, 219, 128);
+    color: hsla(168, 67%, 49%, 0.815);
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 10px;
@@ -55,7 +55,7 @@ section{
 }
 
 #hero h2{
-    color:  whitesmoke;
+    color:  rgb(255, 255, 255);
     text-shadow: 2px 2px 2px rgb(3, 3, 3);
     margin-bottom: 40px;
     font-size: 18px;
