--- a/login.css
+++ b/login.css
@@ -7,8 +7,13 @@ a {
 a:hover {
 	text-decoration: none;
 }
+.link-one{
+   color: #919aee;
+  text-decoration: none;
+}
+
 .link {
-  color: #a2a9e9;
+  color: #3845b4;
   text-decoration: none;
 }
 .link:hover{
@@ -16,6 +21,7 @@ a:hover {
 }
 .inside{
     color:#a2a9e9;
+    
 }
 p {
   font-weight: 500;
@@ -100,7 +106,7 @@ h6 span{
   transform-style: preserve-3d;
   transition: all 600ms ease-out; 
 }
-.card-front, .card-back {
+.card-front, .card-back  {
    box-shadow: 0 4px 8px 0 rgba(20, 20, 20, 0.74);
   width: 100%;
   height: 100%;
@@ -120,6 +126,7 @@ h6 span{
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .card-back {
   transform: rotateY(180deg);
 }
