--- a/login.css
+++ b/login.css
@@ -38,15 +38,16 @@ h6 span{
   font-weight: 700;
 }
 .section{
+  
   position: relative;
   width: 100%;
-  
+  height: 100vh;
   display: block;
 }
 .full-height{
   min-height: 100vh;
-  
 }
+
 
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked){
