--- a/get_started.css
+++ b/get_started.css
@@ -132,8 +132,6 @@ section{
 
 /* ..... */
 
-
-
 .wrapper{
   position: fixed;
   top: 50%;
@@ -270,3 +268,13 @@ section{
   }
 }
 
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
