--- a/login.css
+++ b/login.css
@@ -1,6 +1,5 @@
 /* contact page */
 
-
 a {
 	cursor: pointer;
   transition: all 200ms linear;
@@ -38,17 +37,13 @@ h6 span{
   font-weight: 700;
 }
 .section{
-  
   position: relative;
   width: 100%;
-  height: 100vh;
   display: block;
 }
 .full-height{
   min-height: 100vh;
 }
-
-
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked){
   position: absolute;
@@ -210,7 +205,7 @@ h6 span{
 }
 .card-back.signup {
   
-   background-color: #102770; 
+   background-color: #102770; /* Apply a solid background color */
   transform: rotateY(180deg);
 }
 .checkbox:checked ~ .card-3d-wrap.signup .card-3d-wrapper.signup {
@@ -357,8 +352,8 @@ h6 span{
 
 .logo {
 	position: absolute;
-	top: 30px;
-	right: 30px;
+	top: 20px;
+	
 	display: block;
 	z-index: 100;
 	transition: all 250ms linear;
@@ -376,7 +371,7 @@ h6 span{
 
 /* animated */
 .background {
-  background: linear-gradient(132deg, #dae290, #4877b9, #545881);
+  background: linear-gradient(132deg, #e79140, #4877b9, #545881);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
   position: relative;
@@ -446,9 +441,5 @@ h6 span{
     opacity: 0;
   }
 }
-
-
-
-
 
 
