--- a/budget.css
+++ b/budget.css
@@ -1,81 +1,238 @@
-/* Basic styling for the layout */
-.body{
-    .container{
-    background: transparent;
-     }
-    }
+#toggle-theme {
+  background-color: var(--btn-color-bg);
+  color: var(--primary-text);
+  border-color: var(--primary-text);
+  background-color: #c4b2d4;
+}
 
+/* Light Theme Styles */
+.light-theme {
+  --primary-bg: #ffffff;
+  --primary-text: #333333;
+  --chart-bg: #ffffff;
+  --chart-font-color: #333333;
+  --btn-color-bg: #ceafce;
+  --card-color: white;
+}
 
-#card-1{
-    background-color:#346ba1;
-    color:aliceblue;
+/* Dark Theme Styles */
+.dark-theme {
+  --primary-bg: black;
+  --primary-text: #ffffff;
+  --chart-bg: black;
+  --chart-font-color: black;
+  --btn-color-bg: #af69ee;
+  --card-color: black;
 }
-#card-2{
-    background-color:#e07e63;
-    color:aliceblue;
+
+body {
+  background-color: var(--primary-bg);
+  color: var(--primary-text);
 }
-#card-3{
-    background-color: #bfca43;
-    color:aliceblue;
+
+.theme-toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0px;
+  margin-top: 1px;
 }
-#card-1:hover{
-    background-color:  #7eb1e4;
+.theme-toggle .logo-image {
+  justify-content: flex-start;
 }
-#card-2:hover{
-    background-color: #df9f8e;
+.theme-toggle .btn {
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 0px;
+  margin-top: 1px;
 }
-#card-3:hover{
-    background-color:#bec476;
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 15px;
+  text-align: left;
 }
-.card{
-    border-radius:12px ;
-.card-body{
-    border-radius: 12px;
+
+.logo-image {
+  width: 100px;
+  height: auto;
 }
+
+.chart-heading {
+  color: var(--chart-font-color);
 }
-#table{
-  background-color:#346ba1;
+
+#card-1 {
+  background-color: #3fa0ef;
   color: aliceblue;
 }
-
-#table .list{
- list-style: none;
- padding: 20px;
+#card-1 .card-title {
+  font-size: 30px;
+  color: var(--primary-bg);
+}
+#card-1 .card-texts {
+  font-size: 20px;
+  color: var(--primary-bg);
 }
 
-#table .list .lists{
+#card-2 {
+  background-color: #e07e63;
+  color: aliceblue;
+}
+#card-2 .card-title {
+  font-size: 30px;
+  color: var(--primary-bg);
+}
+#card-2 .money-plus {
+  font-size: 20px;
+  color: var(--primary-bg);
+}
+
+#card-3 {
+  background-color: #bfca43;
+  color: aliceblue;
+}
+#card-3 .card-title {
+  font-size: 30px;
+  color: var(--primary-bg);
+}
+#card-3 .money-minus {
+  font-size: 20px;
+  color: var(--primary-bg);
+}
+
+#card-1:hover {
+  background-color: #7eb1e4;
+}
+
+#card-2:hover {
+  background-color: #df9f8e;
+}
+
+#card-3:hover {
+  background-color: #bec476;
+}
+
+.card {
+  border-radius: 12px;
+}
+.card .card-body {
+  border-radius: 12px;
+}
+
+#table {
+  background-color: #346ba1;
+  color: aliceblue;
+}
+#table .card-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+  flex-wrap: wrap;
+}
+#table .card-body .card-top-title {
+  font-size: 35px;
+  justify-content: flex-start;
+  flex-grow: 1;
+  margin-right: 15px;
+}
+#table .card-body .clear-btn {
+  background-color: cadetblue;
+  color: white;
+  font-size: 22px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  border-radius: 2px;
+}
+#table .card-body .clear-btn:hover {
+  background-color: rgb(121, 182, 139);
+}
+#table .card-body .list {
+  list-style: none;
+  padding: 20px;
+  flex-basis: 100%;
+}
+#table .card-body .list .lists {
   font-size: 16px;
   margin: 12px 0;
-  text-transform:uppercase;
-  position: relative;
-} 
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+#table .card-body .list .transaction {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6px;
+}
+#table .card-body .list .transaction .transaction-text {
+  flex-grow: 1;
+  text-align: left;
+}
+#table .card-body .list .transaction .transaction-amount {
+  color: inherit;
+  text-align: right;
+}
+#table .card-body .list .plus span {
+  color: rgb(52, 187, 52);
+  font-weight: 600;
+  width: 100%;
+  justify-content: flex-end;
+}
+#table .card-body .list .minus span {
+  color: #db5454;
+  font-weight: 600;
+  width: 100%;
+}
 
 #tada {
   background-color: #346ba1;
-  color:aliceblue;
+  color: aliceblue;
+}
+#tada #form {
+  background-color: #346ba1;
+}
+#tada #form .form-control {
+  color: black;
+  font-weight: 600;
+}
+#tada #form .form-control #text {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border: none;
+  width: 100%;
+}
+#tada #form .form-control #amount {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border: none;
+  width: 100%;
+}
+#tada #form .btn {
+  background-color: cadetblue;
+  color: aliceblue;
+  font-size: 20px;
 }
 
-#tada {
-  #form {
-    background-color:#346ba1;
-    .form-control{
-      color:black;
-      font-weight: 600;
-      #text{
-        border: none;
-      }
-      #amount{
-        border: none;
-      }
-  }
-  .btn{
-     background-color:cadetblue;
-     color: aliceblue;
-     font-size: 20px;
-  }
-}
+#tada .form-cont {
+  width: 100%;
+  border: #0a0a0a;
+  border-radius: 2px;
+  display: flex;
+  justify-content: flex-end;
 }
 
+select {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
 
 .chart-heading {
   font-family: "Rubik", sans-serif;
@@ -86,15 +243,21 @@
 }
 
 .chart-container {
-  width: 250px;
+  width: 200px;
+  height: 250px;
+  background-color: var(--chart-bg);
+  color: var(--primary-text);
 }
 
 .programming-stats {
+  background-color: var(--chart-bg);
+  color: var(--primary-text);
   font-family: "Rubik", sans-serif;
   display: flex;
   align-items: center;
   gap: 24px;
   margin: 0 auto;
+  width: -moz-fit-content;
   width: fit-content;
   box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
@@ -103,58 +266,27 @@
   transition: all 400ms ease;
   overflow: auto;
 }
-
 .programming-stats:hover {
   transform: scale(1.02);
   box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
 }
 
-.programming-stats .details ul {
-  list-style: none;
-  padding:20px;
+.card {
+  border: none;
 }
 
-.programming-stats .details ul li {
-  font-size: 16px;
-  margin: 12px 0;
-  text-transform: uppercase;
-}
-
-.programming-stats .details .percentage {
-  font-weight: 700;
-  color: #1092B4;
-}
-
- /* @media only screen and (min-width: 280px) {
-   .col-programming-stats{
-        margin:8px;
-        max-width: 50%;
-}
- } */
-
-#bar-card {
- 
-   font-family: "Rubik", sans-serif;
-  display: flex;
-  align-items: center;
-  gap: 24px;
-  margin: 0 auto;
-  width: fit-content;
-  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
-  border-radius: 20px;
-  padding: 8px 32px;
-  color: #023047;
-  transition: all 400ms ease;
-  
-}
-#bar-card:hover {
-  transform: scale(1.02);
-  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
-}
-
-.chart{
+.chart {
   position: relative;
   height: 265px;
+  background-color: var(--chart-bg);
+  color: var(--primary-text);
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
+  transition: all 400ms ease;
+  overflow: auto;
+}
+.chart:hover {
+  transform: scale(1.01);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
 }
 
 #barChart {
@@ -166,28 +298,4 @@ h2 {
   margin-top: 0;
   font-size: 1.5rem;
   color: #333;
-}
-
-@media (max-width: 768px) {
-  .chart-card {
-    max-width: 100%;
-  }
-} 
-
-.delete-btn{
-  color: black;
-  width:30px;
-  height: 30px;
-  border-radius: 50%;
-  position: absolute;
-  right: 0px;
-  margin-right: 20px;
-  border: none;
-  background: transparent;
-}
-.delete-btn:hover{
-  background-color: #bfca43;
-}
-
-
-
+}/*# sourceMappingURL=budget.css.map */
