--- a/login.css
+++ b/login.css
@@ -36,6 +36,7 @@ h6 span{
   text-transform: uppercase;
   font-weight: 700;
 }
+
 .section{
   position: relative;
   width: 100%;
@@ -96,6 +97,7 @@ h6 span{
   perspective: 800px;
   margin-top: 60px;
 }
+
 .card-3d-wrapper {
   width: 100%;
   height: 100%;
@@ -130,13 +132,14 @@ h6 span{
 
 .card-back {
   transform: rotateY(180deg);
-  
+ 
 }
 
 .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
 }
 .center-wrap{
+  
   position: absolute;
   width: 100%;
   padding: 0 35px;
@@ -146,6 +149,17 @@ h6 span{
   z-index: 20;
   display: block;
 }
+/* .center-wrap{
+  position: absolute;
+  width: 100%;
+  padding: 0 35px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%) translateZ(35px);
+  z-index: 20;
+  display: block;
+} */
+
 
 /* ... Previous CSS code ... */
 
@@ -187,11 +201,12 @@ h6 span{
   box-shadow: 0 4px 8px 0 rgba(20, 20, 20, 0.74);
   width: 100%;
   height: 100%;
+  
   background-color: #2a2b38;
   background-image: url('contact-background.avif');
   background-position: bottom center;
   background-repeat: no-repeat;
-  background-size: 300%;
+  background-size: cover;
   position: absolute;
   border-radius: 6px;
   left: 0;
@@ -205,7 +220,7 @@ h6 span{
 }
 .card-back.signup {
   
-   background-color: #102770; /* Apply a solid background color */
+    /* Apply a solid background color */
   transform: rotateY(180deg);
 }
 .checkbox:checked ~ .card-3d-wrap.signup .card-3d-wrapper.signup {
